mool/tests/compile/fail/datetime_zoned_portable.stderr
error[E0277]: the trait bound `DateTime<Local>: SqlTimestamp` is not satisfied
 --> tests/compile/fail/datetime_zoned_portable.rs:5:13
  |
5 |     let _ = db::funcs::datetime::trunc_day(local);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SqlTimestamp` is not implemented for `DateTime<Local>`
  |
  = help: the trait `SqlTimestamp` is implemented for `DateTime<Utc>`
note: required by a bound in `trunc_day`
 --> src/datetime/portable.rs
  |
  | / trunc_fn!(
  | |     trunc_day,
  | |     --------- required by a bound in this function
  | |     Day,
  | |     "Truncates a UTC timestamp to the start of its day."
  | | );
  | |_^ required by this bound in `trunc_day`
  = note: this error originates in the macro `trunc_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DateTime<FixedOffset>: SqlDatePartSource` is not satisfied
 --> tests/compile/fail/datetime_zoned_portable.rs:8:13
  |
8 |     let _ = db::funcs::datetime::extract_year(fixed);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SqlDatePartSource` is not implemented for `DateTime<FixedOffset>`
  |
  = help: the trait `SqlDatePartSource` is implemented for `DateTime<Utc>`
